<resources>
    <string name="app_name">Book Catalogue</string>
    <string name="system_app_name">Book Catalogue</string>
    <string name="menu_insert">Add Book</string>
    <string name="menu_delete">Delete Book</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="isbn">ISBN</string>
    <string name="publisher">Publisher</string>
    <string name="date_published">Date Published</string>
    <string name="rating">Rating</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="read">Have you read this book?</string>
    <string name="series">Series</string>
    <string name="pages">Pages</string>
    <string name="confirm_add">Add Book</string>
    <string name="confirm_update">Update</string>
    <string name="nobooks">There are no books in this Bookshelf. Please add some using the menu at the bottom of this screen.</string>
    <string name="menu_sort_by_author_expanded">Expand All</string>
    <string name="menu_sort_by">Sort By</string>
    <string name="menu_sort_by_author_collapsed">Collapse All</string>
    <string name="sort_title">Book Catalogue: by Title</string>
    <string name="edit_title">Book Catalogue: Edit Book</string>
    <string name="menu_insert_isbn">Add by ISBN</string>
    <string name="menu_insert_barcode">Add by Scanned Barcode</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_save">Save Book</string>
    <string name="nobookshelves">You have not created any bookshelves yet. Please add some using the menu at the bottom of this screen.</string>
    <string name="menu_insert_bs">Create Bookshelf</string>
    <string name="confirm_add_bs">Add Bookshelf</string>
    <string name="menu_bookshelf">Manage Bookshelves</string>
    <string name="confirm_save_bs">Save Bookshelf</string>
    <string name="menu_delete_bs">Delete Bookshelf</string>
    <string name="delete_1st_bs">Cannot Delete the 1st Bookshelf</string>
    <string name="bookshelf_label">Bookshelf: </string>
    <string name="all_books">All Books</string>
    <string name="isbn_found">ISBN Scanned. Searching Internet.</string>
    <string name="title_isbn_search">Book Catalogue: ISBN Search</string>
    <string name="title_manage_bs">Book Catalogue: Manage Bookshelves</string>
    <string name="title_edit_bs">Book Catalogue: Edit Bookshelf</string>
    <string name="book_exists">The book you are trying to add already exists. .</string>
    <string name="search_label">Search for Books</string>
    <string name="search_hint">Search Author or Title</string>
    <string name="book_not_found">The scanned book was not found. You can sometimes find the correct barcode on the inside front cover. Otherwise please enter the details manually.</string>
    <string name="series_num">#</string>
    <string name="unable_to_connect_google">Unable to Connect to Google Books</string>
    <string name="export_data">Export Books</string>
    <string name="import_data">Import Books</string>
    <string name="import_alert">Warning. Importing data may update existing book records with new information if the uuid column is not present and the id in the import file is the same as an existing id. This is usually fine if you changed a field in an exported file. If you created a new book record, or are importing someone elses books, ensure the uuid field is present or the id field is blank.</string>
    <string name="search_title">Book Catalogue: Search Results</string>
    <string name="results_found">Results Found</string>
    <string name="administration_label">Administration Functions</string>
    <string name="administration_title">Book Catalogue: Administration</string>
    <string name="menu_administration">Admin</string>
    <string name="install_scan_title">Install Barcode Scanner</string>
    <string name="version_number">Version Number:</string>
    <string name="donate">If you would like to support the development of this application, please donate using a my Amazon Wishlist or the paypal button below. Being in Australia means I cannot publish a &quot;paid&quot; version. :-) </string>
    <string name="unable_to_connect_amazon">Unable to Connect to Amazon</string>
    <string name="upgrade_title">Since your last upgrade</string>
    <string name="edit_book">Edit Book</string>
    <string name="edit_book_notes">My Comments</string>
    <string name="edit_book_friends">Loan Book</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="notes">Notes</string>
    <string name="loaned_to">This book has been loaned to:</string>
    <string name="nobody">Nobody</string>
    <string name="loan_to">Loan book to:</string>
    <string name="returned">Returned</string>
    <string name="name">Name</string>
    <string name="webpage_label">Webpage:</string>
    <string name="sourcecode_label">Source Code:</string>
    <string name="contact_label">Contacts:</string>
    <string name="webpage">https://wiki.github.com/eleybourn/Book-Catalogue/</string>
    <string name="sourcecode">https://github.com/eleybourn/Book-Catalogue</string>
    <string name="helppage">https://github.com/eleybourn/Book-Catalogue/wiki/Help</string>
    <string name="contact1">eleybourn@gmail.com</string>
    <string name="contact2">philip.warner@rhyme.com.au</string>
    <string name="donate_label">Donate</string>
    <string name="about_label">About this App</string>
    <string name="administration_functions_label">Functions</string>
    <string name="sortby_popup_title">Sort By</string>
    <string name="sortby_author">Sort by Author</string>
    <string name="sortby_title">Sort by Title</string>
    <string name="sortby_series">Sort by Series</string>
    <string name="sortby_loan">Sort by Loaned</string>
    <string name="sortby_unread">Sort by Unread</string>
    <string name="sortby_genre">Sort by Genre</string>
    <string name="list_price">List Price</string>
    <string name="date_started_reading">Date Started Reading</string>
    <string name="date_finished_reading">Date Finished Reading</string>
    <string name="update_fields">Automatically Update Fields</string>
    <string name="select_fields_to_update">Select Fields to Update</string>
    <string name="select_fields_to_update_help">Selected fields will be updated from the internet. Unselected fields will remain unchanged.</string>
    <string name="overwrite_thumbnail">This will update the selected fields as shown, but Thumbnails can optionally be downloaded for ALL books.\n\nDo you want to overwrite all existing thumbnails? Warning, this may take a long time. </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="download_thumbs">Thumbnails are being downloaded in the background</string>
    <string name="search_fail">Searching for the book failed. Please check your network settings.</string>
    <string name="search_exception">Search failed while %1$s: %2$s</string>
    <string name="hello">Book Catalogue!</string>
    <string name="menu_delete_thumb">Delete Thumbnail</string>
    <string name="help">Help</string>
    <string name="filler_help_text">Full online application help will come soon. </string>
    <string name="menu_manage_fields">Manage Field Visibility</string>
    <string name="manage_fields_help">Selected fields are visible in the add/edit book screens. Unselected fields are hidden.</string>
    <string name="edit_book_anthology">Anthology Titles</string>
    <string name="amazon_wishlist">Amazon Wishlist</string>
    <string name="same_author">All stories in this anthology are written by the same author</string>
    <string name="menu_delete_anthology">Delete Title from Anthology</string>
    <string name="is_anthology">Is this book an Anthology?</string>
    <string name="populate_anthology_titles">Automatically Populate Titles (EXPERIMENTAL)</string>
    <string name="automatic_population_failed">Automatic Population of Titles Failed</string>
    <string name="anthology">Anthology</string>
    <string name="anthology_confirm">Please confirm that these anthology titles are (mostly) correct</string>
    <string name="anthology_save">Save</string>
    <string name="anthology_add">Add</string>
    <string name="menu_add_thumb_photo">From Camera&#8230;</string>
    <string name="thumbnail">Cover Thumbnail</string>
    <string name="menu_rotate_thumb">Rotate Thumbnail&#8230;</string>
    <string name="menu_rotate_thumb_cw">Rotate Clockwise</string>
    <string name="menu_rotate_thumb_ccw">Rotate Anti-Clockwise</string>
    <string name="menu_rotate_thumb_180">Rotate 180 deg</string>
    <string name="menu_zoom_thumb">Zoom Thumbnail</string>
    <string name="help_title_nutshell">In a Nutshell</string>
    <string name="signed">Has this book been signed</string>
    <string name="read_start">Date started reading</string>
    <string name="read_end">Date finished reading</string>
    <string name="location_of_book">Location of the book</string>
    <string name="duplicate_title">Duplicate Book</string>
    <string name="duplicate_book_title">Duplicate Book</string>
    <string name="duplicate_book_message">The book you are trying to add already exists in the database, are you sure you want to add another copy?</string>
    <string name="menu_add_thumb_gallery">From Gallery&#8230;</string>
    <string name="backup_title">Backup?</string>
    <string name="searching_amazon_books">Searching Amazon</string>
    <string name="searching_google_books">Searching Google Books</string>
    <string name="searching_library_thing">Searching LibraryThing</string>
    <string name="bookshelf_title">Select bookshelves for this book</string>
    <string name="select_bookshelves">Select Bookshelves</string>
    <string name="format">Format</string>
    <string name="format1">Paperback</string>
    <string name="format2">Hard Cover</string>
    <string name="format3">eBook</string>
    <string name="format4">Audiobook</string>
    <string name="format5">Guide / Companion</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <string name="auto_update">Would you like to automatically update the following fields now \n* Genre \n* Description \n* Thumbnails\n\n If you select Cancel you can always run this again from the Administration page</string>
    <string name="notset">Not Set</string>
    <string name="menu_search">Search Books</string>
    <string name="menu_insert_name">Add by Name</string>
    <string name="help_click_here">Please click here to access the online help pages</string>
    <string name="save">Save</string>
    <string name="family_name">Family Name</string>
    <string name="given_names">Given Names</string>
    <string name="immediate_global_changes">NOTE: All saved changes apply instantly and globally</string>
    <string name="send_info_text">Click on the button below to gather information about any recent crashes or other errors and send it to one of our developers. This will create a backup copy of your entire database as well as any log files. If you do not wish to send any of these files, delete it from the mail attachments before sending.</string>
    <string name="send_info">Send Information</string>
    <string name="cleanup_files">Cleanup Files</string>
    <string name="cleanup_files_text">Purgeable files currently use %s of storage. Log files and other data are saved at each upgrade, when you backup the database, or when the application crashes. Click the button below to purge these files from your storage. If you have been experiencing crashing or other errors, please consider using the \'Send Information\' button first.</string>
</resources>