<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:padding="10sp">
		
			<ImageView android:id="@+id/row_img" 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
				android:layout_weight="1"
			/>

			<AutoCompleteTextView android:id="@+id/author" 
			  	android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/author"
				android:inputType="textCapWords"
				android:completionThreshold="2"
				/>
		
			<EditText android:id="@+id/title" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/title"
				android:inputType="textCapWords"
				/>

			<EditText android:id="@+id/isbn" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/isbn"
				/>

			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    >
	
				<AutoCompleteTextView android:id="@+id/series" 
					android:layout_width="wrap_content"
					android:layout_height="fill_parent" 
					android:layout_weight="1"
					android:hint="@string/series"
					android:inputType="textCapWords"
					android:completionThreshold="2"
					/>
	
				<EditText android:id="@+id/series_num" 
					android:layout_width="wrap_content"
					android:layout_height="fill_parent" 
					android:layout_weight="1"
					android:hint="@string/series_num"
					android:numeric="decimal"
					/>
			</LinearLayout>

			<AutoCompleteTextView android:id="@+id/publisher" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/publisher"
				android:inputType="textCapWords"
				android:completionThreshold="2"
				/>

			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/date_published" 
				android:textSize="16sp" />
			<DatePicker android:id="@+id/date_published" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				/>

			<Spinner android:id="@+id/bookshelf" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/bookshelf"
				/>

			<EditText android:id="@+id/pages" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/pages"
				android:numeric="decimal"
				/>

			<CheckBox android:id="@+id/read" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/read"
				/>

			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/rating" 
				android:textSize="16sp" />
			<RatingBar android:id="@+id/rating" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:numStars="5"
				/>

			<LinearLayout	
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1">
				<Button android:id="@+id/confirm" 
				  	android:text="@string/confirm_add"
				  	android:width="150sp"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent" />
				
				<Button android:id="@+id/cancel" 
				  	android:text="@string/cancel"
				  	android:width="150sp"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent" />
			</LinearLayout>
	
	</LinearLayout>
</ScrollView>