<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bc_background_gradient_dim" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_border" >

        <TextView
            android:id="@+id/helpinstructions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_click_here"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/helppage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_border"
            android:paddingLeft="15dp"
            android:text="@string/helppage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_blue" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:text="@string/send_info_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/send_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_info" />

        <TextView
            android:id="@+id/cleanup_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:text="@string/cleanup_files_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/cleanup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleanup_files" />
    </LinearLayout>

</ScrollView>