<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<TextView android:id="@+id/loaned_to" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:text="@string/loaned_to"
			/>

		<TextView android:id="@+id/who" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:text="@string/nobody"
			android:paddingBottom = "5sp"
			/>

		<TextView android:id="@+id/line" 
			android:layout_width="fill_parent"
			android:layout_height="2sp" 
			android:layout_weight="1"
			android:background = "#CCCCCC"
			/>
			
		<TextView android:id="@+id/loan_to" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:text="@string/loan_to"
			android:paddingTop = "5sp"
			/>

		<AutoCompleteTextView android:id="@+id/loan_to_who" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:hint="@string/name"
			android:inputType="textCapWords"
			android:completionThreshold="2"
			/>

		<Button android:id="@+id/confirm" 
			android:text="@string/confirm_add"
			android:width="150sp"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent" />



	</LinearLayout>
</ScrollView>