<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:padding="10sp">
		
		<CheckBox android:id="@+id/read" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:hint="@string/read"
			/>
		
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/rating" 
			android:textSize="16sp" />
		<RatingBar android:id="@+id/rating" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:numStars="5"
			/>
		
		<EditText android:id="@+id/notes" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:hint="@string/notes"
			android:lines="5"
			/>
		
		<LinearLayout	
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1">
			<Button android:id="@+id/confirm" 
				android:text="@string/confirm_add"
				android:width="150sp"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent" />
			
			<Button android:id="@+id/cancel" 
				android:text="@string/cancel"
				android:width="150sp"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent" />
		</LinearLayout>
		
	</LinearLayout>
</ScrollView>