<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".BookDetails" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_border" >

        <ImageView
            android:id="@+id/row_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/background_thumb"
            android:gravity="center"
            android:padding="@dimen/padding_border" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/author"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/title"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/isbn" />

                <TextView
                    android:id="@+id/isbn"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/series" />

                <TextView
                    android:id="@+id/series"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/publisher" />

                <TextView
                    android:id="@+id/publisher"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_published" />

                <TextView
                    android:id="@+id/date_published"
                    style="@style/bookDetailsTextStyle"
                    android:hint="@string/notset" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_bookshelves" />

                <TextView
                    android:id="@+id/bookshelf_text"
                    style="@style/bookDetailsTextStyle"
                    android:hint="@string/notset" />
            </LinearLayout>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/pages" />

                <TextView
                    android:id="@+id/pages"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/list_price" />

                <TextView
                    android:id="@+id/list_price"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/format" />

                <TextView
                    android:id="@+id/format"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/bookDetailsTitlesStyle"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/genre"
                    style="@style/bookDetailsTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/notset" />
            </TableRow>

            <CheckBox
                android:id="@+id/anthology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/is_anthology"
                android:nextFocusDown="@+id/description" />
        </TableLayout>

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/header_divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/main_menu_header_divider"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>